Write packet-viewer cache to ~/.cache/packet-viewer instead of cwd